<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">AndroidBlueTooth</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="action_bar_tab_configuration">Conf</string>
  <string name="action_bar_tab_discovery">Disc</string>
  <string name="action_bar_tab_chat">Chat</string>
  <string name="action_bar_tab_echo">Echo</string>
  <string name="action_bar_tab_time">Time</string>

  <string name="button_chat_server_start">Start Chat Server</string>
  <string name="button_chat_server_stop">Stop Chat Server</string>
  <string name="button_discoverable">Discoverable</string>
  <string name="button_discovery">Discovery</string>
  <string name="button_enable">Enable BlueTooth</string>
  <string name="button_send">Send</string>
  <string name="button_time_server_start">Start Time Server</string>
  <string name="button_time_server_stop">Stop Time Server</string>

  <string name="discovery_menu_chat">Chat</string>
  <string name="discovery_menu_time">Time</string>

  <string name="label_adapter_address">Adapter Address:</string>
  <string name="label_adapter_name">Adapter Name:</string>
  <string name="label_bonded_devices">Bonded Devices:</string>
  <string name="label_enabled">Enabled:</string>
  <string name="label_no_rows">No Rows</string>
  <string name="label_scan">Scan:</string>
  <string name="label_state">State:</string>

  <string name="toast_empty_string">Empty String</string>
  <string name="toast_must_enable_bluetooth">Must Enable BlueTooth</string>
  <string name="toast_server_not_running">Server Not Running</string>
  <string name="toast_start_discovery">Starting Discovery</string>
  <string name="toast_stop_discovery">Discovery Complete</string>

  <string name="connectable">Connectable</string>
  <string name="discoverable">Discoverable</string>
  <string name="falsex">False</string>
  <string name="me">Me</string>
  <string name="none">None</string>
  <string name="off">Off</string>
  <string name="on">On</string>
  <string name="truex">True</string>
  <string name="turning_off">Turning Off</string>
  <string name="turning_on">Turning On</string>
  <string name="unknown">Unknown</string>
</resources>
