<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/buttonChatServer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_chat_server_start"/>

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
      <Button
        android:id="@+id/buttonChatSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"/>

      <EditText
        android:id="@+id/editSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    </TableRow>
  </TableLayout>

  <ListView
    android:id="@+id/android:list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="false"/>

  <!-- no rows default -->
  <TextView
    android:id="@+id/android:empty"
    android:text="@string/label_no_rows"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"/>
</LinearLayout>
